--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -2201,7 +2201,7 @@ spec:
                     workspaceDefaultComponents:
                       default:
                         - container:
-                            image: quay.io/devfile/universal-developer-image:ubi8-latest
+                            image: quay.io/devfile/universal-developer-image:ubi8-38da5c2
                           name: universal-developer-image
                       description: Default components applied to DevWorkspaces. These
                         default components are meant to be used when a Devfile does
@@ -3704,7 +3704,7 @@ spec:
                         type: object
                       type: array
                     workspaceDefaultEditor:
-                      default: che-incubator/che-code/insiders
+                      default: eclipse/che-theia/latest
                       description: The default editor to workspace create with. It
                         could be a plugin ID or a URI. The plugin ID must have `publisher/plugin/version`.
                         The URI must start from `http`.
@@ -5528,9 +5528,9 @@ spec:
                   default:
                     defaultComponents:
                       - container:
-                          image: quay.io/devfile/universal-developer-image:ubi8-latest
+                          image: quay.io/devfile/universal-developer-image:ubi8-38da5c2
                         name: universal-developer-image
-                    defaultEditor: che-incubator/che-code/insiders
+                    defaultEditor: eclipse/che-theia/latest
                     defaultNamespace:
                       template: <username>-che
                     secondsOfInactivityBeforeIdling: 1800
@@ -5542,7 +5542,7 @@ spec:
                     defaultComponents:
                       default:
                         - container:
-                            image: quay.io/devfile/universal-developer-image:ubi8-latest
+                            image: quay.io/devfile/universal-developer-image:ubi8-38da5c2
                           name: universal-developer-image
                       description: Default components applied to DevWorkspaces. These
                         default components are meant to be used when a Devfile, that
@@ -7045,7 +7045,7 @@ spec:
                         type: object
                       type: array
                     defaultEditor:
-                      default: che-incubator/che-code/insiders
+                      default: eclipse/che-theia/latest
                       description: The default editor to workspace create with. It
                         could be a plugin ID or a URI. The plugin ID must have `publisher/plugin/version`
                         format. The URI must start from `http://` or `https://`.
