--- a/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -1446,7 +1446,7 @@ spec:
                   workspaceDefaultComponents:
                     default:
                     - container:
-                        image: quay.io/devfile/universal-developer-image:ubi8-latest
+                        image: quay.io/devfile/universal-developer-image:ubi8-38da5c2
                       name: universal-developer-image
                     description: Default components applied to DevWorkspaces. These default components are meant to be used when a Devfile does not contain any components.
                     items:
@@ -2367,7 +2367,7 @@ spec:
                       type: object
                     type: array
                   workspaceDefaultEditor:
-                    default: che-incubator/che-code/insiders
+                    default: eclipse/che-theia/latest
                     description: The default editor to workspace create with. It could be a plugin ID or a URI. The plugin ID must have `publisher/plugin/version`. The URI must start from `http`.
                     type: string
                   workspaceNamespaceDefault:
@@ -3691,9 +3691,9 @@ spec:
                 default:
                   defaultComponents:
                   - container:
-                      image: quay.io/devfile/universal-developer-image:ubi8-latest
+                      image: quay.io/devfile/universal-developer-image:ubi8-38da5c2
                     name: universal-developer-image
-                  defaultEditor: che-incubator/che-code/insiders
+                  defaultEditor: eclipse/che-theia/latest
                   defaultNamespace:
                     template: <username>-che
                   secondsOfInactivityBeforeIdling: 1800
@@ -3705,7 +3705,7 @@ spec:
                   defaultComponents:
                     default:
                     - container:
-                        image: quay.io/devfile/universal-developer-image:ubi8-latest
+                        image: quay.io/devfile/universal-developer-image:ubi8-38da5c2
                       name: universal-developer-image
                     description: Default components applied to DevWorkspaces. These default components are meant to be used when a Devfile, that does not contain any components.
                     items:
@@ -4626,7 +4626,7 @@ spec:
                       type: object
                     type: array
                   defaultEditor:
-                    default: che-incubator/che-code/insiders
+                    default: eclipse/che-theia/latest
                     description: The default editor to workspace create with. It could be a plugin ID or a URI. The plugin ID must have `publisher/plugin/version` format. The URI must start from `http://` or `https://`.
                     type: string
                   defaultNamespace:
