--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -5545,6 +5545,7 @@ spec:
                         name: universal-developer-image
                     defaultEditor: eclipse/che-theia/latest
                     defaultNamespace:
+                      autoProvision: true
                       template: <username>-che
                     secondsOfInactivityBeforeIdling: 1800
                     secondsOfRunBeforeIdling: -1
@@ -7065,10 +7066,12 @@ spec:
                       type: string
                     defaultNamespace:
                       default:
+                        autoProvision: true
                         template: <username>-che
                       description: User's default namespace.
                       properties:
                         autoProvision:
+                          default: true
                           description: Indicates if is allowed to automatically create
                             a user namespace. If it set to false, then user namespace
                             must be pre-created by a cluster administrator.
