--- a/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -3704,6 +3704,7 @@ spec:
                     name: universal-developer-image
                   defaultEditor: eclipse/che-theia/latest
                   defaultNamespace:
+                    autoProvision: true
                     template: <username>-che
                   secondsOfInactivityBeforeIdling: 1800
                   secondsOfRunBeforeIdling: -1
@@ -4640,10 +4641,12 @@ spec:
                     type: string
                   defaultNamespace:
                     default:
+                      autoProvision: true
                       template: <username>-che
                     description: User's default namespace.
                     properties:
                       autoProvision:
+                        default: true
                         description: Indicates if is allowed to automatically create a user namespace. If it set to false, then user namespace must be pre-created by a cluster administrator.
                         type: boolean
                       template:
