--- a/devfile.yaml
+++ b/devfile.yaml
@@ -9,49 +9,60 @@
 # Contributors:
 #   Red Hat, Inc. - initial API and implementation
 #
-
+schemaVersion: 2.1.0
+attributes:
+  controller.devfile.io/storage-type: ephemeral
 metadata:
   name: che-operator
-projects:
-  - name: che-operator
-    source:
-      location: 'https://github.com/eclipse-che/che-operator.git'
-      type: git
-      branch: main
-    clonePath: src/github.com/eclipse-che/che-operator
 components:
-  - id: golang/go/latest
-    memoryLimit: 1G
-    preferences:
-      go.lintFlags: '--fast'
-      go.useLanguageServer: true
-      go.lintTool: golangci-lint
-    type: chePlugin
-    alias: ms-vscode.go
-    env:
-      - value: 'on'
-        name: GO111MODULE
-  - mountSources: true
-    memoryLimit: 1G
-    type: dockerimage
-    alias: dev
-    image: 'quay.io/eclipse/che-golang-1.14:next'
-    env:
-      - value: /go
-        name: GOPATH
-      - value: /tmp/.cache
-        name: GOCACHE
-apiVersion: 1.0.0
+  - name: tooling-container
+    container:
+      image: quay.io/devfile/universal-developer-image:ubi8-latest
+      memoryRequest: 2Gi
+      memoryLimit: 16Gi
+      cpuRequest: 2000m
+      cpuLimit: 6000m
+      env:
+        - name: GO111MODULE
+          value: 'on'
+        - name: GOPATH
+          value: /home/user/go
+        - name: GOCACHE
+          value: /tmp/.cache
 commands:
-  - name: Compile
-    actions:
-      - workdir: /projects/src/github.com/eclipse-che/che-operator
-        type: exec
-        command: make compile
-        component: dev
-  - name: Format
-    actions:
-      - workdir: /projects/src/github.com/eclipse-che/che-operator
-        type: exec
-        command: 'make fmt'
-        component: dev
+  - id: go-build
+    exec:
+      label: 1. Build Eclipse Che Operator binary
+      component: tooling-container
+      commandLine: make build
+  - id: go-run
+    exec:
+      label: 2. Run Eclipse Che Operator
+      component: tooling-container
+      commandLine: make run
+  - id: go-debug
+    exec:
+      label: 3. Run and debug Eclipse Che Operator
+      component: tooling-container
+      commandLine: make debug
+  - id: bundle
+    exec:
+      label: 4. Generate OLM bundle for next channel
+      component: tooling-container
+      commandLine: CHANNEL=next make bundle
+  - id: docker-build-push
+    exec:
+      label: 5. Build and push Eclipse Che Operator container image
+      component: tooling-container
+      commandLine: >
+        read -p "ENTER the image registry (for example \"quay.io\"): " IMAGE_REGISTRY_HOST &&
+        read -p "ENTER the image organization (for example \"eclipse\"): " IMAGE_REGISTRY_USER_NAME &&
+        IMAGE_TOOL=podman make docker-build docker-push IMG="${IMAGE_REGISTRY_HOST}/${IMAGE_REGISTRY_USER_NAME}/che-operator:next"
+  - id: build-catalog
+    exec:
+      label: 6. Build and push Eclipse Che Operator custom catalog and bundle images.
+      component: tooling-container
+      commandLine: >
+        read -p "ENTER the image registry (for example \"quay.io\"): " IMAGE_REGISTRY_HOST &&
+        read -p "ENTER the image organization (for example \"eclipse\"): " IMAGE_REGISTRY_USER_NAME &&
+        build/scripts/olm/buildCatalog.sh -c next -i ${IMAGE_REGISTRY_HOST}/${IMAGE_REGISTRY_USER_NAME}/eclipse-che-openshift-opm-catalog:next --image-tool podman
