--- a/bundle/stable/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/stable/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -3784,7 +3784,7 @@ spec:
                         type: object
                       type: array
                     workspaceDefaultEditor:
-                      default: eclipse/che-theia/latest
+                      default: che-incubator/che-code/insiders
                       description: The default editor to workspace create with. It
                         could be a plugin ID or a URI. The plugin ID must have `publisher/plugin/version`.
                         The URI must start from `http`.
@@ -5403,7 +5403,7 @@ spec:
                       - container:
                           image: quay.io/devfile/universal-developer-image:ubi8-38da5c2
                         name: universal-developer-image
-                    defaultEditor: eclipse/che-theia/latest
+                    defaultEditor: che-incubator/che-code/insiders
                     defaultNamespace:
                       autoProvision: true
                       template: <username>-che
@@ -5414,6 +5414,15 @@ spec:
                       pvcStrategy: per-user
                   description: Development environment default configuration options.
                   properties:
+                    containerBuildConfiguration:
+                      description: Container build configuration.
+                      properties:
+                        openShiftSecurityContextConstraint:
+                          default: container-build
+                          description: OpenShift security context constraint to build
+                            containers.
+                          type: string
+                      type: object
                     defaultComponents:
                       default:
                         - container:
@@ -6920,7 +6929,7 @@ spec:
                         type: object
                       type: array
                     defaultEditor:
-                      default: eclipse/che-theia/latest
+                      default: che-incubator/che-code/insiders
                       description: The default editor to workspace create with. It
                         could be a plugin ID or a URI. The plugin ID must have `publisher/plugin/version`
                         format. The URI must start from `http://` or `https://`.
