--- a/helmcharts/stable/templates/che-operator.ClusterRole.yaml
+++ b/helmcharts/stable/templates/che-operator.ClusterRole.yaml
@@ -392,3 +392,13 @@ rules:
   - subjectaccessreviews
   verbs:
   - create
+- apiGroups:
+  - security.openshift.io
+  resources:
+  - securitycontextconstraints
+  verbs:
+  - get
+  - create
+  - delete
+  - update
+  - use
